Changed CMD -> ENTRYPOINT

--- a/src/main/resources-filtered/docker/Dockerfile
+++ b/src/main/resources-filtered/docker/Dockerfile
@@ -3,5 +3,5 @@ RUN rm -rf ${DEPLOYMENT_DIR}/ROOT
 COPY ${docker-plugin.resource.include} ${DEPLOYMENT_DIR}/ROOT.war
 ADD entrypoint.sh /
 RUN chmod 755 /entrypoint.sh
-CMD /entrypoint.sh
+ENTRYPOINT /entrypoint.sh
 EXPOSE 8080
