ECP-991: bumps version of ecpcrm canonical to version built on repo.incode.work

--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
         <lombok.version>1.18.2</lombok.version>
         <assertj-core.version>3.6.0</assertj-core.version>
 
-        <ecpcrm-canonical.version>2.0.0-M1.20180808-1244-df59937d</ecpcrm-canonical.version>
+        <ecpcrm-canonical.version>2.0.0.20190416-1657-83b7ee37</ecpcrm-canonical.version>
 
 
         <activemq-web.version>5.14.3</activemq-web.version>
